# android-signer

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: android.yml  rust.yml
proto/: Cargo.toml  README.md  build.rs
proto/src/: android_signer.proto  lib.rs
proxy/: .gitignore  assemble.sh  build.sh  settings.gradle.kts
proxy/ffi/: Cargo.toml  uniffi.toml
proxy/ffi/src/: error.rs  lib.rs  server.rs
proxy/gradle/: libs.versions.toml
proxy/gradle/wrapper/: gradle-wrapper.properties
proxy/lib/: build.gradle.kts  proguard-rules.pro
proxy/lib/src/main/java/rust/nostr/android/signer/proxy/: NostrAndroidSignerProxy.kt
proxy/lib/src/main/java/rust/nostr/android/signer/proxy/protobuf/: AndroidSignerProxyProto.java  IsExternalSignerInstalledReplyKt.kt  IsExternalSignerInstalledRequestKt.kt
proxy/lib/src/main/kotlin/rust/nostr/android/signer/proxy/: NostrAndroidSignerProxyAdapter.kt  NostrAndroidSignerProxyMiddleware.kt  NostrAndroidSignerProxyServer.kt  NostrAndroidSignerProxyWrapper.kt  SessionManager.kt
proxy/lib/src/main/kotlin/rust/nostr/android/signer/proxy/types/: AdapterTypes.kt
signer/: Cargo.toml  README.md  build.rs
signer/src/: client.rs  error.rs  lib.rs  prelude.rs
signer/src/proto/: android_signer.proto  android_signer.rs  mod.rs
