[workspace]
members = [
    "proto",
    "proxy/ffi",
    "proxy/bindgen",
    "signer"
]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/rust-nostr/android-signer"
repository = "https://github.com/rust-nostr/android-signer.git"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
nostr-android-signer-proto = { version = "0.44.0", path = "proto" }
tokio = { version = "1", default-features = false }
tonic = "0.14"
tonic-prost = "0.14"
uds = "0.4"
uniffi = "=0.29.4"
