[package]
name = "nostr-android-signer-proto"
version = "0.44.0"
edition = "2024"
description = "Protobuf for Nostr Android Signer"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "nip55", "android", "signer", "proto"]

[dependencies]
prost = "0.14"
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
