[package]
name = "nostr-android-signer"
version = "0.1.0"
edition = "2024"
description = "Nostr Android signer (NIP-55)"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/rust-nostr/android-signer"
repository = "https://github.com/rust-nostr/android-signer.git"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
keywords = ["nostr", "nip55", "android", "signer"]

[dependencies]
hyper-util = "0.1"
nostr = { version = "0.43", features = ["std"] }
nostr-android-signer-proto.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tonic.workspace = true
tower = "0.5"
uds.workspace = true
