[package]
name = "nostr-android-signer"
version = "0.44.0"
edition = "2024"
description = "Nostr Android signer (NIP-55)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "nip55", "android", "signer"]

[dependencies]
hyper-util = "0.1"
nostr = { version = "0.44", features = ["std"] }
nostr-android-signer-proto.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tonic.workspace = true
tower = "0.5"
uds.workspace = true
